Fix a few errors + performance tweak on .htaccess hide subtitle on small screen

--- a/src/css/o2switch.scss
+++ b/src/css/o2switch.scss
@@ -344,8 +344,10 @@
   }
 }
 
-
 @media (max-width: 800px) {
+  .navbar__title {
+    display: none;
+  }
   .flex-grid {
     display: block;
     .col {
